--- a/functions/package.json
+++ b/functions/package.json
@@ -10,14 +10,13 @@
         "logs": "firebase functions:log"
     },
     "engines": {
-        "node": "8"
+        "node": "10"
     },
     "dependencies": {
         "cookie-parser": "^1.4.5",
         "crypto": "^1.0.1",
         "firebase-admin": "^8.10.0",
-        "firebase-functions": "^3.6.1",
-        "node-linkedin": "^0.5.6"
+        "firebase-functions": "^3.6.1"
     },
     "devDependencies": {
         "eslint": "^5.12.0",
