--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@firebase/firestore": "^1.16.2",
         "@material-ui/core": "^4.10.2",
         "@material-ui/icons": "^4.9.1",
         "bootstrap": "^4.5.0",
