Routing on lock 🔐

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
         "firebase-functions": "^3.7.0",
         "firebase-tools": "^8.4.3",
         "next": "9.4.4",
-        "react": "16.13.1",
+        "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-circular-progressbar": "^2.0.3",
-        "react-dom": "16.13.1",
+        "react-dom": "^16.13.1",
         "sass": "^1.26.8",
         "styled-components": "^5.1.1",
         "swr": "^0.2.2"
