--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "firebase-admin": "^8.12.1",
         "firebase-functions": "^3.7.0",
         "firebase-tools": "^8.4.3",
+        "js-cookie": "^2.2.1",
         "next": "9.4.4",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
