--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "next": "9.4.4",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
-        "react-calendar": "file:.yalc/react-calendar",
+        "react-calendar": "git+https://github.com/sanozie/react-calendar.git#diyhacks-styles",
         "react-circular-progressbar": "^2.0.3",
         "react-dom": "^16.13.1",
         "sass": "^1.26.8",
