--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "immer": "^9.0.1",
         "js-cookie": "^2.2.1",
         "next": "9.4.4",
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-calendar": "git+https://github.com/sanozie/react-calendar.git#diyhacks-styles",
