--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@firebase/firestore": "^1.16.2",
         "@material-ui/core": "^4.10.2",
         "@material-ui/icons": "^4.9.1",
-        "bootstrap": "^5.1.0",
+        "bootstrap": "4.5.0",
         "dotenv": "^8.2.0",
         "firebase": "^8.9.1",
         "firebase-admin": "^9.11.0",
@@ -21,7 +21,7 @@
         "next": "^11.1.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
-        "react-bootstrap": "^1.0.1",
+        "react-bootstrap": "1.0.1",
         "react-calendar": "git+https://github.com/sanozie/react-calendar.git#diyhacks-styles",
         "react-circular-progressbar": "^2.0.3",
         "react-dom": "^17.0.2",
