--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
-    "default": "hacklist-stage",
     "staging": "hacklist-stage",
-    "Hacklist Staging": "hacklist-stage"
-  }
+    "prod": "hacklist-prod",
+    "default": "hacklist-stage"
+  },
+  "targets": {}
 }
