--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "auth-host",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
