--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.2.0",
         "firebase": "^8.9.1",
         "firebase-admin": "^9.11.0",
+        "firebase-functions": "^3.15.4",
         "firebase-tools": "^9.16.5",
         "immer": "^9.0.1",
         "js-cookie": "^2.2.1",
